# greenfx-oanda-to-tickq

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.build  Dockerfile.builder  Makefile  Makefile.am  README.md  ca.crt  configure.ac  default.conf  greenfx-oanda-to-tickq.spec  greenfx-ticks-oanda.spec  krb5.conf  main.cc  prepare-NSS-db.sh
SOURCES/: main.cc
src/: Makefile  main.cc
